syntax = "proto3";

option csharp_namespace = "Tasco.ProjectService.Service.Protos";

package workarea;

service WorkAreaService {
  rpc CreateWorkArea (WorkAreaRequest) returns (WorkAreaResponse);
  rpc DeleteWorkArea (WorkAreaRequestById) returns (DeleteResponse);
  rpc GetWorkAreaById (WorkAreaRequestById) returns (WorkAreaResponse);
  rpc UpdateWorkArea (UpdateWorkAreaRequest) returns (WorkAreaResponse);
  rpc GetMyWorkAreasByProjectId(WorkAreaRequestByProjectId) returns (WorkAreaListResponse);
}

// Request/Response messages

message WorkAreaRequest {
  string project_id = 1;
  string name = 2;
  string description = 3;
  string display_order = 4;
  string create_by_user_id = 5;
}

message WorkAreaRequestById {
  string id = 1;
}

message WorkAreaRequestByProjectId {
  string id = 1;
  int32 page_size = 2;
  int32 page_index = 3;
}

message UpdateWorkAreaRequest {
  string id = 1;
  WorkAreaRequest area = 2;
}

message WorkAreaTaskActionResponse {
  string id = 1;
  string work_task_id = 2;
  string user_id = 3;
  string user_name = 4;
  string action_type = 5;
  string description = 6;
  string old_value = 7;
  string new_value = 8;
  string action_date = 9;
}

message WorkAreaTaskMemberResponse {
  string id = 1;
  string work_task_id = 2;
  string user_id = 3;
  string user_name = 4;
  string user_email = 5;
  string role = 6;
  bool is_active = 7;
  string assigned_date = 8;
  string assigned_by_user_id = 9;
  string assigned_by_user_name = 10;
  string removed_date = 11;
  string removed_by_user_id = 12;
  string removed_by_user_name = 13;
}

message WorkAreaSubTaskResponse {
  string id = 1;
  string parent_task_id = 2;
  string title = 3;
  string description = 4;
  string assignee_id = 5;
  string assignee_name = 6;
  string status = 7;
  string created_date = 8;
  string completed_date = 9;
  bool is_deleted = 10;
}

message WorkAreaTaskObjectiveResponse {
  string id = 1;
  string work_task_id = 2;
  string title = 3;
  string description = 4;
  bool is_completed = 5;
  string created_date = 6;
  string completed_date = 7;
  int32 display_order = 8;
  string created_by_user_id = 9;
  string completed_by_user_id = 10;
  repeated WorkAreaSubTaskResponse sub_tasks = 11;
}

message WorkTaskResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string priority = 4;
  string status = 5;
  string start_date = 6;
  string end_date = 7;
  string due_date = 8;
  string created_date = 9;
  string completed_date = 10;
  int32 display_order = 11;
  int32 progress = 12;
  string created_by_user_id = 13;
  repeated WorkAreaTaskActionResponse task_actions = 14;
  repeated WorkAreaTaskMemberResponse task_members = 15;
  repeated WorkAreaTaskObjectiveResponse task_objectives = 16;
}

message WorkAreaResponse {
  string id = 1;
  string project_id = 2;
  string name = 3;
  string description = 4;
  string display_order = 5;
  string created_date = 6;
  string created_by_user_id = 7;
  repeated WorkTaskResponse work_tasks = 8;
}

message WorkAreaListResponse {
  repeated WorkAreaResponse work_areas = 1;
  int32 total_count = 2;
  int32 page_count = 3;
  int32 current_page = 4;
}

message Empty {}

message DeleteResponse {
  string message = 1;
  bool success = 2;
}
