syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "Tasco.TaskService.API.Protos";

package comment;

service CommentService {
  rpc CreateComment (CommentRequest) returns (CommentResponse);
  rpc DeleteComment (CommentRequestById) returns (google.protobuf.Empty);
  rpc GetCommentsByTaskId (CommentRequestByTaskId) returns (CommentListResponse);
  rpc UpdateComment (UpdateCommentRequest) returns (CommentResponse);
}

// Request messages
message CommentRequest {
  string task_id = 1;
  string user_id = 2;
  string user_name = 3;
  string content = 4;
}

message CommentRequestById {
  string id = 1;
  string user_id = 2;
}

message CommentRequestByTaskId {
  string task_id = 1;
  int32 page_size = 2;
  int32 page_index = 3;
}

message UpdateCommentRequest {
  string id = 1;
  string user_id = 2;
  string user_name = 3;
  string content = 4;
}

// Response messages
message CommentResponse {
  string id = 1;
  string task_id = 2;
  string user_id = 3;
  string user_name = 4;
  string content = 5;
  string created_at = 6;
  string updated_at = 7;
  bool is_deleted = 8;
}

message CommentListResponse {
  repeated CommentResponse comments = 1;
  int32 total_count = 2;
  int32 page_count = 3;
  int32 current_page = 4;
} 